; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/table/extr_tableam.c_simple_table_tuple_update.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/table/extr_tableam.c_simple_table_tuple_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@InvalidSnapshot = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"tuple already updated by self\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"tuple concurrently updated\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"tuple concurrently deleted\00", align 1
@.str.3 = private unnamed_addr constant [43 x i8] c"unrecognized table_tuple_update status: %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @simple_table_tuple_update(i32 %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @GetCurrentCommandId(i32 1)
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* @InvalidSnapshot, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = call i32 @table_tuple_update(i32 %14, i32 %15, i32* %16, i32 %17, i32 %18, i32 %19, i32 1, i32* %12, i32* %13, i32* %20)
  store i32 %21, i32* %11, align 4
  %22 = load i32, i32* %11, align 4
  switch i32 %22, label %33 [
    i32 129, label %23
    i32 130, label %26
    i32 128, label %27
    i32 131, label %30
  ]

23:                                               ; preds = %5
  %24 = load i32, i32* @ERROR, align 4
  %25 = call i32 (i32, i8*, ...) @elog(i32 %24, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %37

26:                                               ; preds = %5
  br label %37

27:                                               ; preds = %5
  %28 = load i32, i32* @ERROR, align 4
  %29 = call i32 (i32, i8*, ...) @elog(i32 %28, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  br label %37

30:                                               ; preds = %5
  %31 = load i32, i32* @ERROR, align 4
  %32 = call i32 (i32, i8*, ...) @elog(i32 %31, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0))
  br label %37

33:                                               ; preds = %5
  %34 = load i32, i32* @ERROR, align 4
  %35 = load i32, i32* %11, align 4
  %36 = call i32 (i32, i8*, ...) @elog(i32 %34, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.3, i64 0, i64 0), i32 %35)
  br label %37

37:                                               ; preds = %33, %30, %27, %26, %23
  ret void
}

declare dso_local i32 @table_tuple_update(i32, i32, i32*, i32, i32, i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @GetCurrentCommandId(i32) #1

declare dso_local i32 @elog(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
